[package]
name = "axum-serde"
version = "0.10.0"
description = "Provides multiple serde-based extractors / responses for the Axum web framework, also offers a macro to easily customize extractors / responses."
authors = ["GengTeng <me@gteng.org>"]
license = "MIT"
homepage = "https://github.com/gengteng/axum-serde"
repository = "https://github.com/gengteng/axum-serde"
documentation = "https://docs.rs/axum-serde"
keywords = [
    "axum",
    "serde",
    "extractor",
    "response",
]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
]
edition = "2021"

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
http = "1.3.1"
serde = "1.0.219"
mime = "0.3.17"
serde_yaml = { version = "0.9.33", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
toml_ = { package = "toml", version = "0.8.23", optional = true }
quick-xml = { version = "0.37.5", optional = true, features = ["serialize"] }
sonic-rs = { version = "0.5.1", optional = true }
ciborium = { version = "0.2.2", optional = true }
axum-core = "0.5.2"
thiserror = "2.0.12"
bytes = "1.10.1"

[dev-dependencies]
axum = { version = "0.8.4", default-features = false }
axum-test = "17.0.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros"] }

[features]
yaml = ["dep:serde_yaml"]
msgpack = ["dep:rmp-serde"]
toml = ["dep:toml_"]
xml = ["dep:quick-xml"]
xml_encoding = ["xml", "quick-xml/encoding"]
sonic = ["dep:sonic-rs"]
cbor = ["dep:ciborium"]
full = ["yaml", "msgpack", "toml", "xml", "sonic", "cbor"]

